- #147 Use enums for month and weekday names
- #146 Use single available language of country as default language

2026.1.1
- #145 Add how-to guides
- #144 PL: Add Christmas Eve as holiday
       (thanks to Tokariew)

2026.1.0
- #143 SG: Add country Singapore (locale 'en-SG')
       (thanks to nathanielmiller23)
- #141 AU: Fix dates for 'Australia Day' and 'Anzac Day'

2025.12.0
-      Upgrade requirement arrow to 1.4.0
-      Upgrade test requirements pytest to 9.0.2 and syrupy to 5.0.0
- #140 AU: Fix date of Labour Day in Western Australia
- #139 HU: Add non-working days for 2026
- #138 ES: Add holidays for 2026
- #137 IT: Add holiday 'Festa nazionale di San Francesco d'Assisi, patrono d'Italia'
       IT: Add holiday 'Santi Apostoli Pietro e Paolo' for the municipality of Rome
       IT: Add holiday 'Unità nazionale'
       (thanks to Flavio Cris)
- #124 Add Python EOL action
- #123 Convert all countries into modules

2025.3.0
-      Upgrade test requirements pytest to 8.3.5 and syrupy to 4.9.0
- #119 DK: Holiday "Store bededag" was abolished in 2023

2025.1.0
-      DE: Document legal sources for region 'TH' (Thüringen)
-      DE: Add holiday "Fronleichnam" in region 'TH' for communities with catholic majority
- #117 DE: Add holiday "Weltkindertag" in region 'TH' (Thüringen)
       (thanks to Slarky)
-      Add support for Python 3.13, drop Python 3.8

2024.11.1
- #115 US: Implement federal holidays
       (thanks to J. David Stark)

2024.11.0
-      HU: Add non-working days for 2025 in Hungary

2024.10.0
-      ES: Implement 2025 holidays of Spain

2024.8.3
- #112 AU: Add country AU
       (thanks to Alex Smith)

2024.8.2
- #113 Fix emitter output

2024.8.1
- #111 Refactor core classes, replace date parsing and custom date functions with DSL
- #110 Test holidays are only defined for valid regions
- #109 Enable holidata to be calculated outside confirmed range

2024.8.0
-      Add support for Python 3.12, replace 'snapshottest' with 'syrupy'