@@ -1,3 +1,4 @@
+- #148 Optimize function 'shift_to_weekday'
 - #147 Use enums for month and weekday names
 - #146 Use single available language of country as default language
 
